--- a/bluebell_frontend/package.json
+++ b/bluebell_frontend/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "es6-promise": "^4.2.8",
     "sweetalert2": "^11.7.12",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
