--- a/bluebell_backend/conf/config.yaml
+++ b/bluebell_backend/conf/config.yaml
@@ -12,7 +12,7 @@ mysql:
   host: 127.0.0.1
   port: 3306
   user: root
-  password: root
+  password: 1106
   db: bluebell
   max_open_conns: 100
   max_idle_conns: 20
